# test-folio-backend-deploy

./: .dockerignore  .env.dev  .gitignore  .gitlab-ci.yml  .gitlint  .pre-commit-config.yaml  Dockerfile  Dockerfile.staging  README.md  docker-compose.yml  heroku.yml  pyproject.toml  todo.md
.github/workflows/: CICD.yml
.gitlab/merge_request_templates/: mr_template.md
docs/: feature-detail.md
folio_backend/: manage.py  utils.py
folio_backend/IAM/: admin.py  apps.py  authenticate.py  jwt_integration_view.py  models.py  permissions.py  serializers.py  urls.py  views.py
folio_backend/IAM/migrations/: 0001_initial.py  0002_alter_myuser_budget.py  0002_myuser_groups_myuser_user_permissions.py  0002_myuser_picture.py  0002_remove_myuser_credits_remove_myuser_expiry_date_and_more.py  0003_alter_myuser_account_alter_myuser_username.py  0003_alter_myuser_bankaccount_alter_myuser_id_number_and_more.py  0004_alter_myuser_id_number.py  0005_alter_myuser_account_alter_myuser_id_number_and_more.py  0006_myuser_bankaccount.py
folio_backend/engine/: admin.py  follow_serializers.py  follow_views.py  models.py  rules.py  serializer.py  stock_serializers.py  stock_views.py  tests.py  transaction_serializers.py  transaction_views.py  urls.py  utils.py  views.py  views_test.py
folio_backend/engine/migrations/: 0001_initial.py  0002_alter_stockprice_stock.py  0002_portfolio_stocks.py  0002_rename_price_portfolio_cash.py  0003_alter_stockprice_stock.py  0003_portfolio_cash.py  0003_stock_code.py  0004_alter_follow_id_alter_portfolio_id_alter_stock_id_and_more.py  0005_user_budget_alter_portfolio_budget_and_more.py  0006_remove_follow_cash_remove_portfolio_cash_and_more.py  0007_remove_follow_endtime.py  0008_remove_follow_stop_limit.py
folio_backend/engine/portfolio/: serializers.py  views.py
folio_backend/engine/templates/: insert_test.html
folio_backend/engine/user/: serializers.py  views.py
folio_backend/folio_backend/: asgi.py  settings.py  settings_test.py  urls.py  wsgi.py
folio_backend/transaction/: urls.py  views.py
