[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120

[tool.poetry]
name = "folio-backend"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
Django = "^4.0.3"
django-cors-headers = "^3.11.0"
djangorestframework = "^3.13.1"
psycopg2-binary = "^2.9.3"
dj-database-url = "^0.5.0"
python-decouple = "^3.6"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
pytest = "^7.1.1"
black = "^22.1.0"
isort = "^5.10.1"
gitlint = "^0.17.0"
autoflake = "^1.4"
pytest-django = "^4.5.2"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
