[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120

[tool.poetry]
name = "folio-backend"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
Django = "^4.0.3"
django-cors-headers = "^3.11.0"
djangorestframework = "^3.13.1"
psycopg2-binary = "^2.9.3"
dj-database-url = "^0.5.0"
python-decouple = "^3.6"
twstock = "^1.3.1"
pytz = "^2022.1"
lxml = "^4.8.0"
pandas = "^1.4.2"
django-extensions = "^3.1.5"
black = "22.3.0"
gitlint = "^0.17.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
pytest = "^7.1.1"
black = "^22.3.0"
isort = "^5.10.1"
gitlint = "^0.17.0"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
